tests/baselines/reference/tsxAttributeResolution7.errors.txt
file.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
file.tsx(9,2): error TS2322: Type '{ "data-foo": number; }' is not assignable to type '{ "data-foo"?: string; }'.
  Types of property '"data-foo"' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== file.tsx (2 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements {
    		test1: { "data-foo"?: string };
    	}
    }
    
    // Error
    <test1 data-foo={32} />;
     ~~~~~
!!! error TS2322: Type '{ "data-foo": number; }' is not assignable to type '{ "data-foo"?: string; }'.
!!! error TS2322:   Types of property '"data-foo"' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    
    // OK
    <test1 data-foo={'32'} />;
    <test1 data-bar={'32'} />;
    <test1 data-bar={32} />;
    